# mc_accounts

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: mc-accounts-ci.yml  mc-api-gateway-ci.yml
src/: manage.py
src/accounts/: admin.py  factory_models.py  models.py  serializers.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_alter_user_phone.py  0002_user_specialization.py  0003_remove_address_phone.py
src/accounts/tests/: __init__.py  authentication.py  update_user.py  user_details.py
src/address/: admin.py  factory_models.py  foctories.py  get_token_fun.py  models.py  serializers.py  tests.py  urls.py  views.py
src/address/migrations/: 0001_initial.py  0002_alter_address_user.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
