[tool.poetry]
name = "MC Accounts"
version = "0.1.0"
description = ""
authors = ["MICHAŁ"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
bandit = "1.7.9"
coverage = "^7.6.12"
django = "5.1"
django-environ = "0.11.2"
django-extensions = "3.2.3"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
factory-boy = "3.3.1"
psycopg2-binary = "^2.9.10"
python = "^3.13"
requests = "2.32.3"
ruff = "0.6.3"
safety = "3.2.7"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"
jwcrypto = "^1.5.6"
urllib3 = "^2.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


